# ClassAccess

./: .gitignore  readme.dev.md  readme.md  requirements.txt
backend/: .gitignore  Dockerfile  celerybeat-schedule.dir  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
backend/AI/: __init__.py  admin.py  ai_service.py  apps.py  models.py  prompts.py  signals.py  urls.py  views.py
backend/AI/extraction/: pdf_text_extractor.py
backend/AI/migrations/: 0001_initial.py
backend/AI/rag/: document_indexer.py  index_store.py  qa_engine.py
backend/AI/rag_utils/: embeddings.py  llm_client.py  vector_store.py
backend/AI/rag_utils/extraction/: pdf_text_extractor.py
backend/AI/utils/: pdf_text.py
backend/Auth/: models.py  serializers.py  views.py
backend/Auth/migrations/: 0001_initial.py  0002_alter_customuser_role.py
backend/Student/: serializers.py  urls.py  views.py
backend/Student/services/: tokens.py
backend/Teacher/: admin.py  models.py  permission.py  serializers.py  tasks.py  urls.py  views.py
backend/Teacher/migrations/: 0001_initial.py  0002_pdfsession_is_expired.py  0003_pdfsession_original_file_name_and_more.py
backend/accounts/: models.py  urls.py
backend/accounts/migrations/: 0001_initial.py
backend/backend/: celery.py  settings.py  urls.py
backend/utils/: redis_client.py  supabase_client.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx
viewit/: db.sqlite3  manage.py
viewit/app1/: admin.py  models.py  urls.py  views.py
viewit/utils/: encryption.py
viewit/viewit/: asgi.py  (+3 more)
(+14 files in other folders)
